--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
        "Person with self.x='abcdefghij'"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,10 +1438,8 @@
     "\n",
     "    def __radd__(self, other):   # reverse add!\n",
     "        if hasattr(other, 'x'):\n",
-    "            return MyClass(self.x + other.x)\n",
-    "        return MyClass(self.x + str(other))\n",
-    "\n",
-    "    \n",
+    "            return MyClass(other.x + self.x)\n",
+    "        return MyClass(str(other) + self.x)\n",
     "\n",
     "    def __repr__(self):\n",
     "        return f'Person with {self.x=}'\n",
@@ -1454,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1461,7 @@
        "Person with self.x='abcde100'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1496,7 @@
        "[10, 20, 30, 40, 50, 60]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1516,7 @@
        "Person with self.x='abcde100'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1529,23 +1527,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'MyClass'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[120], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;241;43m100\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mm1\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'MyClass'"
-     ]
+     "data": {
+      "text/plain": [
+       "Person with self.x='100abcde'"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "100 + m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4609935120\n",
+      "4610663632\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what's going to happen here? \n",
+    "\n",
+    "print(id(m1))\n",
+    "m1 += 'xyz'    # m1 = m1 + 'xyz'\n",
+    "print(id(m1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person with self.x='abcdexyz'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m1)"
    ]
   },
   {
