--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
        "Person with self.x='abcdefghij'"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,6 +1441,12 @@
     "            return MyClass(other.x + self.x)\n",
     "        return MyClass(str(other) + self.x)\n",
     "\n",
+    "    def __iadd__(self, other):   # in-place add, +=\n",
+    "        if hasattr(other, 'x'):\n",
+    "            self.x += other.x\n",
+    "        self.x = self.x + str(other)\n",
+    "        return self\n",
+    "\n",
     "    def __repr__(self):\n",
     "        return f'Person with {self.x=}'\n",
     "        \n",
@@ -1452,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1467,7 @@
        "Person with self.x='abcde100'"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1502,7 @@
        "[10, 20, 30, 40, 50, 60]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1522,7 @@
        "Person with self.x='abcde100'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1542,7 @@
        "Person with self.x='100abcde'"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,15 +1553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4609935120\n",
-      "4610663632\n"
+      "4609949072\n",
+      "4609949072\n"
      ]
     }
    ],
@@ -1569,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1583,6 +1589,13 @@
    "source": [
     "print(m1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
