--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1431,7 +1431,7 @@
     "            return self.x < other.x\n",
     "        return False\n",
     "\n",
-    "    def __add__(self, other):\n",
+    "    def __add__(self, other):        #  self + other\n",
     "        if hasattr(other, 'x'):\n",
     "            return MyClass(self.x + other.x)\n",
     "        return MyClass(self.x + str(other))\n",
@@ -1596,6 +1596,98 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abs__',\n",
+       " '__add__',\n",
+       " '__and__',\n",
+       " '__bool__',\n",
+       " '__ceil__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__divmod__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__float__',\n",
+       " '__floor__',\n",
+       " '__floordiv__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__index__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__invert__',\n",
+       " '__le__',\n",
+       " '__lshift__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__or__',\n",
+       " '__pos__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rand__',\n",
+       " '__rdivmod__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rfloordiv__',\n",
+       " '__rlshift__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__ror__',\n",
+       " '__round__',\n",
+       " '__rpow__',\n",
+       " '__rrshift__',\n",
+       " '__rshift__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__rxor__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__trunc__',\n",
+       " '__xor__',\n",
+       " 'as_integer_ratio',\n",
+       " 'bit_count',\n",
+       " 'bit_length',\n",
+       " 'conjugate',\n",
+       " 'denominator',\n",
+       " 'from_bytes',\n",
+       " 'imag',\n",
+       " 'numerator',\n",
+       " 'real',\n",
+       " 'to_bytes']"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(5)"
+   ]
   },
   {
    "cell_type": "code",
