--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1431,8 +1431,8 @@
     "            return self.x < other.x\n",
     "        return False\n",
     "\n",
-    "    def __add__(self, other):        #  self + other\n",
-    "        if hasattr(other, 'x'):\n",
+    "    def __add__(self, other):        # self + other\n",
+    "        if hasattr(other, 'x'):      # does other even have an 'x' attribute?\n",
     "            return MyClass(self.x + other.x)\n",
     "        return MyClass(self.x + str(other))\n",
     "\n",
