--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1691,10 +1691,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 123, y = [10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 123\n",
+    "y = [10, 20, 30]\n",
+    "\n",
+    "# if I want to debug\n",
+    "print(f'x = {x}, y = {y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=123, y=[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# as of Python 3.10\n",
+    "print(f'{x=}, {y=}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(f'')"
+   ]
   }
  ],
  "metadata": {
