--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1811,13 +1811,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all of these implement __getitem__, that take self and the index\n",
+    "\n",
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'Person with {self.x=}'\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.x[index]\n",
+    "        \n",
+    "m = MyClass('abcde')\n",
+    "m[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# all of these implement __getitem__, that take self and the index\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
