--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1843,6 +1843,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Magic methods and bowls\n",
+    "\n",
+    "1. Make it possible to use `len` on an instance of `Bowl`, getting the number of scoops.\n",
+    "2. Make it possible to use `[]` on a `Bowl` instance, getting back one scoops.\n",
+    "3. Make it possible to use `+` on two `Bowl` instances, getting back one with the scoops from both."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
