--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1855,6 +1855,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'Bowl' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[151], line 41\u001b[0m\n\u001b[0;32m     38\u001b[0m b\u001b[38;5;241m.\u001b[39madd_scoops(s4, s5)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(b\u001b[38;5;241m.\u001b[39mflavors()) \n\u001b[1;32m---> 41\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'Bowl' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'Scoop of {self.flavor}'\n",
+    "        \n",
+    "class Bowl:\n",
+    "    MAX_SCOOPS = 3\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "        \n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:\n",
+    "            if len(self.scoops) < self.MAX_SCOOPS:\n",
+    "                self.scoops.append(one_scoop)\n",
+    "            \n",
+    "    def flavors(self):\n",
+    "        return [one_scoop.flavor\n",
+    "               for one_scoop in self.scoops]\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        output = 'Bowl of: \\n'\n",
+    "\n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.scoops))\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "s4 = Scoop('flavor 4')\n",
+    "s5 = Scoop('flavor 5')\n",
+    "\n",
+    "b = Bowl()\n",
+    "b.add_scoops(s1, s2)\n",
+    "b.add_scoops(s3)\n",
+    "b.add_scoops(s4, s5)\n",
+    "print(b.flavors()) \n",
+    "\n",
+    "print(len(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
