--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1855,26 +1855,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chocolate', 'vanilla', 'coffee']\n"
+      "['chocolate', 'vanilla', 'coffee']\n",
+      "3\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'Bowl' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[151], line 41\u001b[0m\n\u001b[0;32m     38\u001b[0m b\u001b[38;5;241m.\u001b[39madd_scoops(s4, s5)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(b\u001b[38;5;241m.\u001b[39mflavors()) \n\u001b[1;32m---> 41\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'Bowl' has no len()"
-     ]
+     "data": {
+      "text/plain": [
+       "Scoop of vanilla"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1907,7 +1907,10 @@
     "                                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.scoops))\n",
+    "        return len(self.scoops)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.scoops[index]\n",
     "\n",
     "s1 = Scoop('chocolate')\n",
     "s2 = Scoop('vanilla')\n",
@@ -1921,7 +1924,8 @@
     "b.add_scoops(s4, s5)\n",
     "print(b.flavors()) \n",
     "\n",
-    "print(len(b))"
+    "print(len(b))\n",
+    "b[1]"
    ]
   },
   {
