--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1910,6 +1910,9 @@
     "        return len(self.scoops)\n",
     "\n",
     "    def __getitem__(self, index):\n",
+    "        if isinstance(index, slice):\n",
+    "            b = Bowl()\n",
+    "            b.scoops = \n",
     "        return self.scoops[index]\n",
     "\n",
     "s1 = Scoop('chocolate')\n",
@@ -1926,6 +1929,46 @@
     "\n",
     "print(len(b))\n",
     "b[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Scoop of chocolate, Scoop of vanilla]"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Scoop of chocolate, Scoop of vanilla]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[slice(None, 2)]"
    ]
   },
   {
