--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1872,7 @@
        "Scoop of vanilla"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1912,8 +1912,12 @@
     "    def __getitem__(self, index):\n",
     "        if isinstance(index, slice):\n",
     "            b = Bowl()\n",
-    "            b.scoops = \n",
-    "        return self.scoops[index]\n",
+    "            b.scoops = self.scoops[index]   # index is a slice, get that part of self.scoops\n",
+    "            return b\n",
+    "        return self.scoops[index]   # index is an integer (we hope), and return that scoop\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        if \n",
     "\n",
     "s1 = Scoop('chocolate')\n",
     "s2 = Scoop('vanilla')\n",
@@ -1933,16 +1937,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Scoop of chocolate, Scoop of vanilla]"
+       "Bowl of: \n",
+       "\t1: Scoop of chocolate\n",
+       "\t2: Scoop of vanilla"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,22 +1959,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[Scoop of chocolate, Scoop of vanilla]"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'Bowl' and 'Bowl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[162], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m b2 \u001b[38;5;241m=\u001b[39m Bowl()\n\u001b[0;32m      5\u001b[0m b2\u001b[38;5;241m.\u001b[39madd_scoops(s2, s3)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mb1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb2\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'Bowl' and 'Bowl'"
+     ]
     }
    ],
    "source": [
-    "b[slice(None, 2)]"
+    "b1 = Bowl()\n",
+    "b1.add_scoops(s1)\n",
+    "\n",
+    "b2 = Bowl()\n",
+    "b2.add_scoops(s2, s3)\n",
+    "\n",
+    "b1 + b2"
    ]
   },
   {
