--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1872,7 @@
        "Scoop of vanilla"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,13 @@
     "        return self.scoops[index]   # index is an integer (we hope), and return that scoop\n",
     "\n",
     "    def __add__(self, other):\n",
-    "        if \n",
+    "        if not isinstance(other, Bowl):\n",
+    "            raise TypeError('Can only add bowls to other bowls')\n",
+    "\n",
+    "        b = Bowl()\n",
+    "        b.add_scoops(*self.scoops)  \n",
+    "        b.add_scoops(*other.scoops)\n",
+    "        return b\n",
     "\n",
     "s1 = Scoop('chocolate')\n",
     "s2 = Scoop('vanilla')\n",
@@ -1937,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1954,7 @@
        "\t2: Scoop of vanilla"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,19 +1965,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'Bowl' and 'Bowl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[162], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m b2 \u001b[38;5;241m=\u001b[39m Bowl()\n\u001b[0;32m      5\u001b[0m b2\u001b[38;5;241m.\u001b[39madd_scoops(s2, s3)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mb1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb2\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'Bowl' and 'Bowl'"
-     ]
+     "data": {
+      "text/plain": [
+       "Bowl of: \n",
+       "\t1: Scoop of chocolate\n",
+       "\t2: Scoop of vanilla\n",
+       "\t3: Scoop of coffee"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1979,10 +1987,24 @@
     "b1.add_scoops(s1)\n",
     "\n",
     "b2 = Bowl()\n",
-    "b2.add_scoops(s2, s3)\n",
+    "b2.add_scoops(s2, s3, s4)\n",
     "\n",
     "b1 + b2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
