--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1872,7 @@
        "Scoop of vanilla"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,8 +1921,7 @@
     "            raise TypeError('Can only add bowls to other bowls')\n",
     "\n",
     "        b = Bowl()\n",
-    "        b.add_scoops(*self.scoops)  \n",
-    "        b.add_scoops(*other.scoops)\n",
+    "        b.add_scoops(*(self.scoops + other.scoops))\n",
     "        return b\n",
     "\n",
     "s1 = Scoop('chocolate')\n",
@@ -1943,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1953,7 @@
        "\t2: Scoop of vanilla"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1965,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1976,7 @@
        "\t3: Scoop of coffee"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,20 +1990,6 @@
     "\n",
     "b1 + b2"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
