--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1910,10 +1910,11 @@
     "        return len(self.scoops)\n",
     "\n",
     "    def __getitem__(self, index):\n",
-    "        if isinstance(index, slice):\n",
-    "            b = Bowl()\n",
-    "            b.scoops = self.scoops[index]   # index is a slice, get that part of self.scoops\n",
-    "            return b\n",
+    "        # if isinstance(index, slice):\n",
+    "        #     b = Bowl()\n",
+    "        #     b.scoops = self.scoops[index]   # index is a slice, get that part of self.scoops\n",
+    "        #     return b\n",
+    "\n",
     "        return self.scoops[index]   # index is an integer (we hope), and return that scoop\n",
     "\n",
     "    def __add__(self, other):\n",
