--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -1910,11 +1910,10 @@
     "        return len(self.scoops)\n",
     "\n",
     "    def __getitem__(self, index):\n",
-    "        # if isinstance(index, slice):\n",
-    "        #     b = Bowl()\n",
-    "        #     b.scoops = self.scoops[index]   # index is a slice, get that part of self.scoops\n",
-    "        #     return b\n",
-    "\n",
+    "        if isinstance(index, slice):\n",
+    "            b = Bowl()\n",
+    "            b.scoops = self.scoops[index]   # index is a slice, get that part of self.scoops\n",
+    "            return b\n",
     "        return self.scoops[index]   # index is an integer (we hope), and return that scoop\n",
     "\n",
     "    def __add__(self, other):\n",
@@ -1994,10 +1993,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# __del__\n",
+    "\n",
+    "# this method runs when the reference count drops to zero\n",
+    "\n",
+    "x = [10, 20, 30]   # refcount to [10, 20, 30] is 1\n",
+    "y = x     # refcount is 2\n",
+    "z = x     # refcount is 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = None\n",
+    "y = None\n",
+    "z = None\n",
+    "\n",
+    "# what is the refcount of [10, 20, 30]?  0"
+   ]
   }
  ],
  "metadata": {
