--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2016,35 @@
     "y = None\n",
     "z = None\n",
     "\n",
-    "# what is the refcount of [10, 20, 30]?  0"
+    "# what is the refcount of [10, 20, 30]?  0\n",
+    "# when it goes to 0, the object is deleted and the memory is freed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print(f'__del__ ran; {self.x=}')\n",
+    "\n",
+    "m1 = MyClass(10)\n",
+    "m2 = MyClass(20)\n",
+    "m3 = MyClass(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = MyClass(40) "
    ]
   }
  ],
