--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -2040,11 +2040,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__del__ ran; self.x=10\n"
+     ]
+    }
+   ],
    "source": [
     "m1 = MyClass(40) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Who does use `__del__`?\n",
+    "\n",
+    "1. Files -- when they are freed, they are flushed and closed\n",
+    "2. NumPy arrays -- when their refcount goes to 0, they "
    ]
   }
  ],
