--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -2062,8 +2062,17 @@
     "# Who does use `__del__`?\n",
     "\n",
     "1. Files -- when they are freed, they are flushed and closed\n",
-    "2. NumPy arrays -- when their refcount goes to 0, they "
+    "2. NumPy arrays -- when their refcount goes to 0, they free the C part of the memory usage\n",
+    "3. TempFile -- erases the tempfile when the refcount goes to 0\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
