--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -2178,11 +2178,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next time\n",
+    "\n",
+    "1. Object system in Python"
+   ]
   }
  ],
  "metadata": {
