--- a/2023 12December 18.ipynb
+++ b/2023 12December 18.ipynb
@@ -2183,8 +2183,17 @@
    "source": [
     "# Next time\n",
     "\n",
-    "1. Object system in Python"
+    "1. Object system in Python\n",
+    "2. Metaclasses\n",
+    "3. Iterators"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
