--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1,9 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0017579f-c71b-470b-8bc4-4c42b40d1d39",
+   "metadata": {},
+   "source": [
+    "# Agenda\n",
+    "\n",
+    "1. Object system in Python\n",
+    "2. Metaclasses\n",
+    "3. Iterators"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a11fc4-553d-4c7e-bf28-9b71643012eb",
+   "id": "951b78a9-d0fa-4962-b2de-99140659a0ff",
    "metadata": {},
    "outputs": [],
    "source": []
