--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -9,7 +9,10 @@
     "\n",
     "1. Object system in Python\n",
     "2. Metaclasses\n",
-    "3. Iterators"
+    "3. Iterators\n",
+    "    - Iterator protocol\n",
+    "    - Adding the iterator protocol to our classes\n",
+    "    - Generator functions and generators"
    ]
   },
   {
