--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -17,8 +17,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "951b78a9-d0fa-4962-b2de-99140659a0ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Bowl:\n",
+    "    pass\n",
+    "\n",
+    "b = Bowl()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "10b14a2e-7c71-4b3f-bfbf-02cbebd8d047",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Bowl"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "948dcaba-ed5c-4f11-9391-554b456df6a8",
    "metadata": {},
    "outputs": [],
    "source": []
