--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -52,8 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "948dcaba-ed5c-4f11-9391-554b456df6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Bowl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbe22c2-2b5c-45d3-8231-b80ea74b827e",
    "metadata": {},
    "outputs": [],
    "source": []
