--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -73,8 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fdbe22c2-2b5c-45d3-8231-b80ea74b827e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c294856-a5cb-4a82-b9f0-646a3bc93eed",
    "metadata": {},
    "outputs": [],
    "source": []
