--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -139,7 +139,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e0bdbaaf-cb2b-4cf3-8f72-8c621e633aae",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
