--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -360,12 +360,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ada78c59-030e-4418-8ab1-b09be940b0a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello from MyClass'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how can I have a method that works from both the instance and class, but doesn't\n",
+    "# require passing an instance?\n",
+    "\n",
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def hello():\n",
+    "        return f'Hello from MyClass'\n",
+    "\n",
+    "m = MyClass(10)\n",
+    "m.hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1d64d5df-d2e9-41bb-a8b8-fb00db32f886",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello from MyClass'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MyClass.hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b468c141-7cb1-4c92-a72f-f5502ff30012",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# how can I have"
+    "# @classmethod \n",
+    "\n",
+    "\n",
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    @classmethod\n",
+    "    def hello():\n",
+    "        return f'Hello from '\n",
+    "\n",
+    "m = MyClass(10)\n",
+    "m.hello()"
    ]
   }
  ],
