--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -414,10 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b468c141-7cb1-4c92-a72f-f5502ff30012",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello from <class '__main__.MyClass'>\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# @classmethod \n",
     "\n",
@@ -427,12 +438,41 @@
     "        self.x = x\n",
     "\n",
     "    @classmethod\n",
-    "    def hello():\n",
-    "        return f'Hello from '\n",
+    "    def hello(cls):    # class methods get the class as an argument\n",
+    "        return f'Hello from {cls}'\n",
     "\n",
     "m = MyClass(10)\n",
     "m.hello()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bc94e270-1d83-4f6b-b923-f65feb2b3254",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello from <class '__main__.MyClass'>\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MyClass.hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c44ae1e-09b7-4cb7-b274-807813a7b2e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
